fix line number alignment in pad

--- a/site/styles.css
+++ b/site/styles.css
@@ -455,7 +455,6 @@ input[type=number] {
     overflow-y: auto;
     display: flex;
     gap: 0.1em;
-    line-height: 1.09em;
 }
 
 .code-block {
@@ -472,8 +471,16 @@ input[type=number] {
     white-space: pre;
 }
 
+.code-line {
+    height: 1.25em;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
 .line-numbers {
-    width: 1.5em;
+    min-width: 1.5em;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -486,10 +493,6 @@ input[type=number] {
     .line-numbers {
         color: #bcc9ca;
     }
-}
-
-.code-line {
-    display: block;
 }
 
 .code-span {
@@ -542,7 +545,7 @@ input[type=number] {
 
 .output {
     white-space: pre;
-    margin-left: 1.75em;
+    margin-left: 1.85em;
     padding: 0.4em 0;
     font-family: "Code Font", monospace;
     transform: rotateX(180deg);
